src/objects/ClassLink__c.object
<CustomObject>
    <description>Represents the linkage from one file to another via an &quot;extends&quot;, &quot;implements&quot;, &quot;sees&quot;, and &quot;exceptions&quot;</description>
    <fields>
        <fullName>CodeInfoName__c</fullName>
        <formula>CodeInfo__r.FileName__c</formula>
        <label>Code Info Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeInfo__c</fullName>
        <description>This is the link to the file that &quot;contains&quot; the link.</description>
        <inlineHelpText>This is the link to the file that &quot;contains&quot; the link.</inlineHelpText>
        <label>Code Info</label>
        <referenceTo>CodeInfo__c</referenceTo>
        <relationshipLabel>Class Links</relationshipLabel>
        <relationshipName>ClassLinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CoreApexLink__c</fullName>
        <description>Web address of a core Apex class or interface that this links to.</description>
        <inlineHelpText>Web address of a core Apex class or interface that this links to.</inlineHelpText>
        <label>Core Apex Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinksToName__c</fullName>
        <description>The name of the class or method that this link is in reference to.</description>
        <inlineHelpText>The name of the class or method that this link is in reference to.</inlineHelpText>
        <label>Links To Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinksTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the link to the file that Code Info file actually links to.</description>
        <inlineHelpText>This is the link to the file that Code Info file actually links to.</inlineHelpText>
        <label>Links To</label>
        <referenceTo>CodeInfo__c</referenceTo>
        <relationshipLabel>Class Links (Links To)</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedConstruct__c</fullName>
        <description>The method or inner class that the class link may related to.  For example, a @throws link does not belong to a class but rather a method of a class.</description>
        <inlineHelpText>The method or inner class that the class link may related to.  For example, a @throws link does not belong to a class but rather a method of a class.</inlineHelpText>
        <label>Related Construct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of class link this record represents.  Is it an &quot;extends&quot;, an &quot;implements&quot;, a &quot;see&quot;, or an &quot;exception&quot;.</description>
        <inlineHelpText>The type of class link this record represents.  Is it an &quot;extends&quot;, an &quot;implements&quot;, a &quot;see&quot;, or an &quot;exception&quot;.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Class Link</label>
    <nameField>
        <displayFormat>CLN-{0000000000}</displayFormat>
        <label>Class Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>